--- a/ui-consumer/src/index.html
+++ b/ui-consumer/src/index.html
@@ -5,6 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <script
+  crossOrigin="true"
+  src="https://unpkg.com/react@16/umd/react.development.js"
+></script>
+<script
+  crossOrigin="true"
+  src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"
+></script>
 </head>
 
 <body>
