--- a/ui-test-components/src/index.html
+++ b/ui-test-components/src/index.html
@@ -4,7 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Document</title>  <script
+  crossOrigin="true"
+  src="https://unpkg.com/react@16/umd/react.development.js"
+></script>
+<script
+  crossOrigin="true"
+  src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"
+></script>
 </head>
 
 <body>
