--- a/html-app/html-app.html
+++ b/html-app/html-app.html
@@ -13,6 +13,14 @@
    
       </style> -->
       <!-- <script src="http://localhost:8080/remoteEntry.js"></script> -->
+      <script
+      crossOrigin="true"
+      src="https://unpkg.com/react@16/umd/react.development.js"
+    ></script>
+    <script
+      crossOrigin="true"
+      src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"
+    ></script>
       <script src="http://localhost:8081/main.js"></script>
       <!-- <script src="https://ui-consumer.vercel.app/main.js"></script> -->
   </head>
