--- a/ui-consumer/src/index.html
+++ b/ui-consumer/src/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Wp5 Consumer App</title>
 </head>
 
 <body>
