Add trivia and poll components

--- a/html-app/index.html
+++ b/html-app/index.html
@@ -4,16 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Client*</title>
-    <!-- <style>
-      .evwZIL{
-        color: red  !important;
-        font-style: italic;
-        font-size: 40px;
-      }
-   
       </style> -->
-      <!-- <script src="http://localhost:8080/remoteEntry.js"></script> -->
-      <script src="http://localhost:8081/main.js"></script>
+      <!-- <script src="http://localhost:8081/main.js"></script> -->
+      <script src="http://localhost:8081/trivia.js"></script>
+      <script src="http://localhost:8081/poll.js"></script>
+
       <!-- <script src="https://ui-consumer.vercel.app/main.js"></script> -->
   </head>
   
@@ -21,8 +16,13 @@
   <body>
    Inside Body Tag
    <div id="app">
-     Inside test div 1
+     Inside div id app
     </div>
-   
+    <div id="poll">
+      Inside div id poll
+     </div>
+     <div id="trivia">
+      Inside trivia
+     </div>
   </body>
 </html>
