--- a/ui-consumer/src/index.html
+++ b/ui-consumer/src/index.html
@@ -5,10 +5,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Wp5 Consumer App</title>
+  <script src="http://localhost:8080/triviaRemoteEntry.js"></script>
+  <script src="http://localhost:8080/pollRemoteEntry.js"></script>
+
 </head>
 
 <body>
   <div id="app"></div>
+  <div id="trivia"></div>
+  <div id="poll"></div>
+
 </body>
 
 </html>
