--- a/html-app/index.html
+++ b/html-app/index.html
@@ -4,23 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Client*</title>
-      </style> -->
-      <!-- <script src="http://localhost:8081/main.js"></script> -->
+      <script src="http://localhost:8081/main.js"></script>
       <script src="http://localhost:8081/trivia.js"></script>
       <script src="http://localhost:8081/poll.js"></script>
-
-      <!-- <script src="https://ui-consumer.vercel.app/main.js"></script> -->
   </head>
   
 
   <body>
-   Inside Body Tag
+   <h1> /main.js</h1>
    <div id="app">
      Inside div id app
     </div>
+    <h1> /poll.js</h1>
+
     <div id="poll">
       Inside div id poll
      </div>
+     <h1> /trivia.js</h1>
+
      <div id="trivia">
       Inside trivia
      </div>
